# git-ustash

./: Cargo.nix  Cargo.toml  README.md  flake.nix
src/: main.rs
tests/: .gitignore  cabal.project  flake.nix  git-ustash-tests.cabal
tests/src/: Main.hs
